# PPP-Newsletter

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-newsletter.yml
newsletter/: __init__.py  ai.py  brevo.py  cli.py  collectors.py  config.py  models.py  render.py  scoring.py  storage.py
tests/: test_render.py  test_scoring.py
