[project]
name = "hong-kong-ppp-newsletter"
version = "0.1.0"
description = "Review-first weekly Hong Kong PPP newsletter automation."
requires-python = ">=3.11"
dependencies = [
  "google-auth>=2.29.0",
  "gspread>=6.1.0",
  "jinja2>=3.1.0",
  "python-dateutil>=2.9.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
